# firmware_updater

./: .gitignore  Cargo.toml  build.rs  devices.json  readme.md
src/: main.rs  models.rs  network.rs  usb.rs
ui/: appwindow.slint
