[package]
name = "firmware_updater"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = "2.6"
slint = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"

[build-dependencies]
slint-build = "1.8"